--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,16 @@
 #title{
     font-family: 'Akaya Telivigala', cursive;
     margin-top: 50px;
+    color:rgba(0, 0, 0, 0.726);
+    text-shadow:0px  0px 20px white;
+    /* box-shadow: 0px 0px 7px 0px blue;
+    background-color:darkorange; */
+}
+
+#sign-in{
+    font-family: 'Akaya Telivigala', cursive;
+    text-shadow: 0px 0px 50px 50px white;
+    background-color: transparent;
 }
 
 body{
@@ -10,7 +20,7 @@ body{
 }
 
 .main-container{
-    background-color:blue;
+    background-color:transparent;
     height: 50vh;
     width: 60vh;
 height: 40vh;
@@ -23,7 +33,7 @@ margin-right: auto;
 }
 
 #form{
-background-color:aqua ;
+background-color:transparent ;
 width: 60vh;
 height: 40vh;
 margin-left: auto;
@@ -34,13 +44,15 @@ margin-top: 70px;
 }
 
 #form button{
+    box-shadow: 0px 0px 7px black;
+    padding: 10px;
     margin-top: 40px;
     margin-bottom: 20px;
     font-family: 'Akaya Telivigala', cursive;
     font-size: 20px;
     transition: all 0.3s ease-in-out;
     background-color: transparent;
-    border: 2px solid;
+    border: 1px solid;
     border-color: black;
     border-radius: 7px;
     
@@ -57,7 +69,30 @@ margin-top: 70px;
 
 
 #form input{
+    box-shadow: 0px 0px 4px 0px black;
+    transition: all 0.3s ease-in-out;
+    border: 1px solid;
+    border-color: black;
+    border-radius: 5px;
+    background-color:transparent;
     margin-top: 40px;
     font-family: 'Akaya Telivigala', cursive;
+    font-size: 20px;
+}
+
+#form input:hover{
+    transition: all 0.3s ease-in-out;
+    border: 1px solid;
+    border-color: transparent;
+    border-radius: 5px;
+    background-color:white;
+    margin-top: 40px;
+    font-family: 'Akaya Telivigala', cursive;
+    font-size: 20px;
+}
+
+#visible{
+    height: 50px;
+    width: 50px;
     font-size: 20px;
 }
