--- a/main.css
+++ b/main.css
@@ -3,8 +3,20 @@
     margin: 0;
 }
 
+body{
+    background-image: url(good.jpg);
+    background-repeat: repeat;
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+
+h1{
+    visibility: hidden;
+}
+
 .demo{
-    background-color:blue;
+    background-color:transparent;
 }
 
 #nav-bar{
@@ -13,18 +25,89 @@
 
 #title{
     position: relative;
-    height: 100px;
+    height: 200px;
+    border: 2px solid;
+    border-color:black ;
     width: 200px;
     margin-left: auto;
     margin-right: auto;
+    border-radius:50%;
+    box-shadow:  6px 6px  black;
+    transition: all 0.3s ease-in-out;
+
+}
+#title:hover{
+    position: relative;
+    height: 200px;
+    border: 2px solid;
+    border-color:grey ;
+    width: 200px;
+    margin-left: auto;
+    box-shadow:  4px 4px  black;
+    margin-right: auto;
+    border-radius:50%;
 
 }
 
 .image{
     width: 33.3%;
-    background-color: aqua;
+    background-color: transparent;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .demo{
     width: 33.3%;
+    
+}
+
+.list-parent{
+    background-color:transparent;
+    width:33.3%;
+}
+
+.list{
+    margin-top: 0px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    list-style: none;
+    display: flex;
+    background-color: transparent;
+}
+
+.list li{
+    margin: 20px;
+}
+
+.list button{
+    padding: 10px;
+    background-color: transparent;
+    border: 2px solid;
+    box-shadow: 6px 6px black;
+    border-color: black;
+    transition: all 0.3s ease-in-out;
+}
+
+.list button:hover{
+    background-color: transparent;
+    border: 2px solid;
+    box-shadow: 2px 2px black;
+    border-color: black;
+}
+
+#main-container{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.class{
+    margin: 20px;
+    margin-top: 20px;
+    width: 500px;
+    height:500px;
+    border: 6px dashed;
+    border-color: black;
 }
